# mid-ir

./: .gitignore  pyproject.toml  retro.sh
antennas/data/Antenna_9.19.2025/: unknown_250mK_XXXmK.csv  (+14 more)
antennas/src/: prc_antennas.ipynb
data/DEV2 2SNAP/: pcrcurve_cr_20240118-150251.txt  pcrcurve_cr_20240118-150251_dark.txt  pcrcurve_cr_20240118-151711_dark.txt  pcrcurve_cr_20240118-152955.txt  pcrcurve_cr_20240118-152955_dark.txt  pcrcurve_cr_20240118-154058_dark.txt  pcrcurve_cr_20240118-165236.txt
data/R1C3_DCR_7.7.25/: dcr_pcb4_18.24M_trigger_-0.030_Tstart_265mK_2nd_DCR.csv
data/R1C3_cryoamp_6.23.2025/: R1C3_pcb1_44.47M_1.61TVS1_0.080_0.090_0.100V_260mK.csv  R1C3_pcb5_44.38M_1.61TVS1_0.080_0.090_0.100V_258mK.csv  hist_data_test.json
data/reset_dynamics/: B240821r7c5_darkbox_facingwdw_5p2uAbias_50Ohmshunt_ZFL_Z60_lpf4.tif  B240821r7c5_darkbox_facingwdw_5p2uAbias_50Ohmshunt_ZFL_Z60_lpf5.tif  C2_015V_Newamps_80nmDev3_balun00000.txt  C2_015V_Newamps_80nmDev3_balun00004.txt  C2_015V_Newamps_80nmDev3_balun00006.txt  C2_015V_Newamps_80nmDev3_balun00010.txt
dl-util/: .s2j-state.json  dl.ps1  dl.sh  index.html  install_and_sync.ps1  install_and_sync.sh  repo_url.txt
mir_paper/src/: dev3_80nm_standardized.ipynb  hero_60nm_finalQCLdata.ipynb  hero_60nm_multidevice.ipynb  mm_square.ipynb  presentation_4_23_plots.py  scope_trace.ipynb  single_wire.ipynb  single_wire_standardized.ipynb  snaps.ipynb  snaps_standardized.ipynb
presentation/: README.md  package.json
src/: mm_square.ipynb  single_wire.ipynb  snaps.ipynb
src/util/: load_Pc230518.py
(+232 files in other folders)
