[project]
name = "mid-ir-paper-figures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "snsphd>=0.1.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
